--- a/src/pages/PullsPage.css
+++ b/src/pages/PullsPage.css
@@ -2,9 +2,11 @@
   padding: 10px;
   display: grid;
   grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto auto 1fr;
   gap: 10px;
   grid-template-areas:
-    'title title'
+    'header header'
+    'nav    nav'
     'list  detail';
   height: 100vh;
   width: 100vw;
@@ -18,8 +20,12 @@
   /* Add padding, border, or any additional styling as needed */
 }
 
-.page-title {
-  grid-area: title;
+.header {
+  grid-area: header;
+}
+
+.nav-bar {
+  grid-area: nav;
 }
 
 .list-view {
