--- a/src/components/PRRow/index.css
+++ b/src/components/PRRow/index.css
@@ -31,18 +31,26 @@
   justify-content: center;
 }
 
-.stats span {
-  padding-left: 5px;
-}
-
 .content > .status {
   display: flex;
   flex-direction: row;
   gap: 5px;
+  flex-wrap: wrap;
 }
 
 .content,
 .timeline,
 .stats {
   padding: 5px;
+}
+
+@media (max-width: 768px) {
+  .row {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+      'content'
+      'timeline'
+      'stats';
+  }
 }
